--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@400;700&display=swap');
+
 *,
 *::before,
 *::after {
@@ -7,14 +9,42 @@
 }
 
 body {
-  display: flex;
-  justify-content: center;
   background-color: #FEFCFB;
+  font-family: 'Space Grotesk', sans-serif;
+}
+
+h1 {
+  margin-bottom: 1rem;
+}
+
+h2 {
+  text-transform: uppercase;
+  font-weight: 400;
+  font-size: 1rem;
+  letter-spacing: 0.1rem;
+}
+
+.container {
+  margin: 0 auto;
+  padding-top: 2rem;
+  width: 50%;
+}
+
+.info {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 1rem;
+}
+
+.info > div {
+  width: 25%;
 }
 
 .board {
   display: grid;
-  grid-template-columns: repeat(4, 1fr);
+  grid-template-columns: repeat(4, 160px);
+  justify-content: center;
   gap: 1rem;
 }
 
@@ -28,4 +58,20 @@ body {
   cursor: pointer;
   transform-origin: center;
   transform: scale(105%);
+}
+
+.scoreboard {
+  display: flex;
+  gap: 2rem;
+}
+
+.scoreboard p {
+  font-size: 2rem;
+  font-weight: 700;
+}
+
+.scoreboard > div {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
